All survey status buttons working

--- a/templates/qrcode/create_qr_code.html
+++ b/templates/qrcode/create_qr_code.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="qr_imoji flex">
                         <span><img src="{% static 'assets/img/image 5.png'%}" alt="" /></span>
-                        <span>How do you feel about Apple, Coffee in today's breakfast? </span>
+                        <span>{{ qrcode.promotional_sentence }}</span>
                     </div>
                     <div class="privacy_policy flex padding_center">
                         <span><input type="checkbox" /></span>
