--- a/templates/qrcode/survey_not_started.html
+++ b/templates/qrcode/survey_not_started.html
@@ -118,7 +118,7 @@
 
                 <section class="survey__date">
                     <section class="survey__text">
-                        <h3>survey not started</h3>
+                        <h3>{% if brand_name %}{{ brand_name }}{% endif %} Survey Status</h3>
                     </section>
 
                     <div class="end__survey__container">
