--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -254,8 +254,8 @@
                 <div class="key__value red"></div>
                 <small class="key__text">Link clicks/scans</small>
               </div>
-              <div class="access__report__keys flex">
-                <div class="key__value yellow"></div>
+              <div class=" flex">
+                <div class="key__vaccess__report__keysalue yellow"></div>
                 <small class="key__text">Locations</small>
               </div>
               <div class="access__report__keys flex">
