created email template

--- a/templates/qrcode/create_qr_code_form.html
+++ b/templates/qrcode/create_qr_code_form.html
@@ -94,7 +94,7 @@
             const surveyDatePopup = document.querySelector(".survey_date_popup");
 
             qrCodeStartBtn.addEventListener("click", (e) => {
-                e.preventDefault();
+                // e.preventDefault();
                 surveyDatePopup.classList.add("survey_date_popup_show");
             });
             qrCodeStartBtnCloseBtn.addEventListener("click", () => {
