--- a/templates/qrcode/create_qr_code.html
+++ b/templates/qrcode/create_qr_code.html
@@ -16,6 +16,11 @@
             referrerpolicy="no-referrer"
         ></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
+        <style>
+            .container {
+              overflow-y: scroll;
+            }
+          </style>
     </head>
     <body>
         <main>
