end survey message

--- a/templates/qrcode/end__survey__message.html
+++ b/templates/qrcode/end__survey__message.html
@@ -22,6 +22,9 @@
       href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
     />
     <style>
+       .container {
+        overflow-x: scroll;
+      }
       .change__survey__date__btn {
         background-color: var(--pink-color);
         color: var(--white-color);
