--- a/templates/qrcode/end__survey__message.html
+++ b/templates/qrcode/end__survey__message.html
@@ -22,7 +22,7 @@
       href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
     />
     <style>
-       .container {
+      .container {
         overflow-x: scroll;
       }
       .change__survey__date__btn {
@@ -45,14 +45,14 @@
         height: 50px !important;
       } */
       .form_control_end__btn {
-        height: 50px;
+        height: 20px;
         width: 100%;
         justify-content: flex-end;
       }
       .endsurvey__form__control {
       }
       .endsurvey__form__control__text {
-        height: 80px;
+        height: 50px;
 
         text-align: center;
         color: rgb(63, 61, 61);
@@ -75,7 +75,10 @@
         padding: 0.8rem;
       }
       .img {
-        height: 200px;
+        height: 140px;
+      }
+      .img img {
+        height: 100%;
       }
       .message textarea {
         background-color: #e3e3e3;
