--- a/templates/qrcode/end_survey.html
+++ b/templates/qrcode/end_survey.html
@@ -17,58 +17,66 @@
         ></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
         <style>
-            .change__survey__date__btn {
-                background-color: var(--pink-color);
-                color: var(--white-color);
-                padding: 0.5rem;
-                font-size: 15px;
-                border-radius: 0.5rem;
-            }
-            .change__survey__date__btn a {
-                color: var(--white-color);
-            }
-            .survey__date__inputs select {
-                border: none;
-            }
-            .survey__date__inputs select option {
-                background-color: var(--gray-bg);
-            }
-            /* .survey__date__title {
+            .container {
+        overflow-x: scroll;
+      }
+      .change__survey__date__btn {
+        background-color: var(--pink-color);
+        color: var(--white-color);
+        padding: 0.5rem;
+        font-size: 15px;
+        border-radius: 0.5rem;
+      }
+      .change__survey__date__btn a {
+        color: var(--white-color);
+      }
+      .survey__date__inputs select {
+        border: 1px solid var(--gray-bg);
+      }
+      /* .survey__date__inputs select option {
+        background-color: var(--gray-bg);
+      } */
+      /* .survey__date__title {
         height: 50px !important;
       } */
-            .form_control_end__btn {
-                height: 50px;
-                width: 100%;
-                justify-content: flex-end;
-            }
-            .endsurvey__form__control {
-            }
-            .endsurvey__form__control__text {
-                height: 80px;
+      .form_control_end__btn {
+        height: 40px;
+        width: 100%;
+        margin-top: 50px;
+        justify-content: flex-end;
+      }
+      .endsurvey__form__control {
+      }
+      .endsurvey__form__control__text {
+        height: 40px;
 
-                text-align: center;
-                color: rgb(63, 61, 61);
-            }
-            .survey__date__inputs {
-                flex-direction: column;
-            }
-            .end__survey__container {
-                border-top: 1px solid var(--red-color);
-                margin-top: 3px;
-            }
-            .form_control_date__submit {
-                border-top: 1px solid var(--red-color);
-                flex-direction: column;
-            }
-            .form_control_date__submit button {
-                background-color: var(--green-bg);
-                color: var(--white-color);
-                min-width: 200px;
-                padding: 0.8rem;
-            }
-            .img {
-                height: 200px;
-            }
+        text-align: center;
+        color: rgb(63, 61, 61);
+      }
+      .survey__date__inputs {
+        flex-direction: column;
+      }
+      .end__survey__container {
+        border-top: 1px solid var(--red-color);
+        margin-top: 3px;
+      }
+      .form_control_date__submit {
+        border-top: 1px solid var(--red-color);
+        flex-direction: column;
+        margin-top: 50px;
+      }
+      .form_control_date__submit button {
+        background-color: var(--green-bg);
+        color: var(--white-color);
+        min-width: 200px;
+        padding: 0.8rem;
+      }
+      .img {
+        height: 150px;
+      }
+      .img img {
+        width: 100%;
+      }
         </style>
     </head>
     <body>
