--- a/templates/qrcode/survey_date.html
+++ b/templates/qrcode/survey_date.html
@@ -17,13 +17,16 @@
         ></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
         <style>
+            .container {
+              overflow-y: scroll;
+            }
             .survey__date_fixed {
-                height: calc(100vh - 70px);
+              height: calc(100vh - 70px);
             }
             .survey__date__form__cover__fixed {
-                height: 500px;
+              height: 500px;
             }
-        </style>
+          </style>
     </head>
 
     <body>
