--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -485,6 +485,17 @@
     </script>
     <script>
       // Fetch Api for countries
+
+
+      /*
+      {
+      "id":38,"username":"lav",
+      "email":"nagaswrn@gmail.com",
+      "phone":"8888555533","first_name":"",
+      "last_name":"","role":"Client_Admin",
+      "teamcode":"100014","phonecode":null,
+      "profile_image":"/media/user.png"}
+      */
       const selectId = document.getElementById("countries");
       const optionId = document.getElementById("countries__options");
       const url =
